--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,12 @@
 Package: samplesizeBS
 Type: Package
 Title: Bayesian sample size in a decision-theoretic approach for the Birbaum-Saunders
-Version: 0.1-1
+Version: 0.0.1
 Date: 2020-02-17
 Author: Manoel Santos Neto [aut, cre] and Eliador Costa[aut, cre]
 Maintainer: Manoel Santos Neto <mn.neco@gmail.com> and Eliardo Costa <eliardocosta@ccet.ufrn>
-Description: This package includes the estimation of model parameters, hypothesis tests for the precision parameter, 
-             a residual analysis and influence diagnostic tools.
-Depends: R (>= 3.1.2)
-Imports: LearnBayes, stats  
+Description: This package includes the estimation of the posterior distribution and obtention of the Bayesian optimum sample size.
+Depends: R (>= 3.1.2), LearnBayes, stats
 License: GPL-2 | GPL-3
 Encoding: UTF-8
 LazyData: true
