--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,10 @@
 export(bss.dt.bs)
 export(rbs)
 export(rpost.bs)
+importFrom(LearnBayes,rigamma)
+importFrom(stats,median)
+importFrom(stats,optimize)
+importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,var)
