--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,8 @@ Author: Manoel Santos Neto [aut, cre] and Eliador Costa[aut, cre]
 Maintainer: Manoel Santos Neto <mn.neco@gmail.com> and Eliardo Costa <eliardocosta@ccet.ufrn>
 Description: This package includes the estimation of the posterior distribution and obtention of the Bayesian optimum sample size.
 Depends: R (>= 3.1.2), LearnBayes, stats
-License: GPL-2 | GPL-3
+License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
-
-
+RoxygenNote: 7.0.2  
+Suggests: testthat
