--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bss.dt.bs)
 export(rbs)
 export(rpost.bs)
 importFrom(LearnBayes,rigamma)
+importFrom(graphics,abline)
 importFrom(stats,median)
 importFrom(stats,optimize)
 importFrom(stats,quantile)
