--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@
 export(bss.dt.bs)
 export(rbs)
 export(rpost.bs)
+import(ggplot2)
 importFrom(LearnBayes,rigamma)
-importFrom(graphics,abline)
+importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,optimize)
 importFrom(stats,quantile)
