--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,21 @@ export(bss.dt.bs)
 export(logp.beta)
 export(rbeta.post)
 export(rbs)
+import(dplyr)
 import(ggplot2)
+import(magrittr)
 importFrom(LearnBayes,laplace)
 importFrom(LearnBayes,rigamma)
 importFrom(LearnBayes,rwmetrop)
 importFrom(grDevices,cairo_pdf)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
+importFrom(graphics,legend)
 importFrom(graphics,par)
 importFrom(graphics,plot)
-importFrom(progress,progress_bar)
+importFrom(graphics,points)
+importFrom(parallel,detectCores)
+importFrom(pbmcapply,pbmcmapply)
 importFrom(stats,acf)
 importFrom(stats,lm)
 importFrom(stats,median)
