--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: samplesizeBS
 Type: Package
 Title: Bayesian sample size in a decision-theoretic approach for the Birbaum-Saunders
-Version: 0.1.9
+Version: 0.2.0
 Date: 2020-07-05
 Author:  Eliador Costa[aut, cre] and Manoel Santos Neto [aut, cre]
 Maintainer: Manoel Santos Neto <manoelferreira@uaest.ufcg.edu.br> and Eliardo Costa <eliardocosta@ccet.ufrn.br>
 Description: Optimal Bayesian sample size for estimating the mean of the Birbaum-Saunders distribution. Also, this package includes the random generation of the joint posterior distribution of the BS/inverse-gamma model.
-Depends: R (>= 3.1.2), LearnBayes, dplyr, ggplot2, magrittr, pbmcapply
+Depends: R (>= 3.1.2), LearnBayes, dplyr, magrittr, pbmcapply
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
